# sandbox-agentic

./: .gitignore  .safety-project.ini  README.md  helper.sh  pyproject.toml
.github/workflows/: cicd.yml
notebooks/: explore_llms.ipynb
tests/tgedr_sandbox_agentic/: test_example.py
